update readme & swagger annotations
